Modernise the code base for Java 17
Behaviour-preserving rewrite using language features the release-17 bump
made available:

- AutoCropResult and the engine's InputJob become records (accessor call
  sites updated, including tests).
- Switch statements use arrow labels; getSplitModeName is a switch
  expression; the archive-format switch groups "cbz","zip" / "cbr","rar".
- instanceof pattern matching replaces test-then-cast in the UI panel code.
- Stream.toList() replaces collect(Collectors.toList()); Collectors.joining
  replaces two hand-rolled StringBuilder loops.
- Extension and tool-path constants are List.of(...) with anyMatch lookups.
- IOAction is annotated @FunctionalInterface.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>